# discord-tail-bot

./: .gitignore  Cargo.toml  README.md  configuration.yaml.dist
src/: configuration.rs  lib.rs  logchecker.rs  main.rs
