[package]
name = "discord_tail_bot"
version = "0.2.1"
authors = ["Andrew Northall <andrew@northall.me.uk>"]
edition = "2021"

[dependencies]
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
secrecy = { version = "0.8", features = ["serde"] }
chrono = "0.4"
regex = "1.0"
config = "0.13"
log = "0.4"
env_logger = "0.10"

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "cache"]